{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 36,
  "lineage": "a6211e84-f08a-5b3b-20f1-4bf56c171f79",
  "resources": [
    {
      "module": "module.us-e2_default_vpc",
      "mode": "data",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-2:004665482139:transit-gateway/tgw-096b4d7cd66f69e81",
            "association_default_route_table_id": "tgw-rtb-006f856878b5c339a",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "tgw in iss-nonprod",
            "dns_support": "enable",
            "id": "tgw-096b4d7cd66f69e81",
            "owner_id": "004665482139",
            "propagation_default_route_table_id": "tgw-rtb-006f856878b5c339a",
            "tags": {
              "Name": "iss-nonprod-us-east-2-tgw",
              "contactemail": "cloudinfrastructureservices@PETCO.com",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/aws_terraform/iss-nonprod",
              "org": "petco",
              "owner": "david.stanford"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:security-group/sg-04e9eeddc082dd1d4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04e9eeddc082dd1d4",
            "ingress": [],
            "name": "default",
            "owner_id": "004665482139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-030f1af0e3e18c501",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-01c31f5815ddbc5ad",
              "subnet-0b9cd250bcfd390e3"
            ],
            "tags": {
              "Name": "iss-nonprod_nonprod-us-e2-vpc1_tgw-attach",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-096b4d7cd66f69e81",
            "vpc_id": "vpc-0a9de773c4fd37c67",
            "vpc_owner_id": "004665482139"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-031cfc1c158cfbcf2",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-13-48-152.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.48.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az1-public-subnet_nat-eipalloc",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0255e6a6789545d66",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-155-216.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.155.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az2-public-subnet_nat-eipalloc",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:internet-gateway/igw-0412076ffb8bd7fa5",
            "id": "igw-0412076ffb8bd7fa5",
            "owner_id": "004665482139",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_igw",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031cfc1c158cfbcf2",
            "id": "nat-0ae6f02814e94d20f",
            "network_interface_id": "eni-0925e99a7053ad502",
            "private_ip": "172.25.16.173",
            "public_ip": "3.13.48.152",
            "subnet_id": "subnet-0b3413c14e1a6b103",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az1-public-subnet_nat",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            }
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0255e6a6789545d66",
            "id": "nat-0333db9d76e526fdf",
            "network_interface_id": "eni-08596fcee95c3159b",
            "private_ip": "172.25.16.207",
            "public_ip": "3.139.155.216",
            "subnet_id": "subnet-0685c2033a73dabe4",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az2-public-subnet_nat",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            }
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d99a5459fdb01a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ae6f02814e94d20f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d99a5459fdb01a8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_nat_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cee7afaf8e5a70a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0333db9d76e526fdf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cee7afaf8e5a70a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_nat_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_transit_gateway",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-private-subnet-172.16.0.0/12",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.16.0.0/12",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d99a5459fdb01a83337197873",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d99a5459fdb01a8",
            "state": "blackhole",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "tgw-096b4d7cd66f69e81",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-private-subnet-172.16.0.0/12",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.16.0.0/12",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cee7afaf8e5a70a33337197873",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cee7afaf8e5a70a3",
            "state": "blackhole",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "tgw-096b4d7cd66f69e81",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0412076ffb8bd7fa5",
            "id": "r-rtb-09ddf632a4cec4af01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ddf632a4cec4af0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_internet_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0412076ffb8bd7fa5",
            "id": "r-rtb-06afb7f79bd64b2641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06afb7f79bd64b264",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_internet_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05d99a5459fdb01a8",
            "owner_id": "004665482139",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az1-private-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cee7afaf8e5a70a3",
            "owner_id": "004665482139",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az2-private-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09ddf632a4cec4af0",
            "owner_id": "004665482139",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az1-public-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06afb7f79bd64b264",
            "owner_id": "004665482139",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az2-public-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03616e326dd557add",
            "route_table_id": "rtb-05d99a5459fdb01a8",
            "subnet_id": "subnet-01c31f5815ddbc5ad"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b55a0821904f1d7b",
            "route_table_id": "rtb-0cee7afaf8e5a70a3",
            "subnet_id": "subnet-0b9cd250bcfd390e3"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b41354e910cf0c36",
            "route_table_id": "rtb-09ddf632a4cec4af0",
            "subnet_id": "subnet-0b3413c14e1a6b103"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd5d2bcf22ca6e1d",
            "route_table_id": "rtb-06afb7f79bd64b264",
            "subnet_id": "subnet-0685c2033a73dabe4"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nonprod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:subnet/subnet-01c31f5815ddbc5ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.16.0/26",
            "id": "subnet-01c31f5815ddbc5ad",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004665482139",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az1-private-subnet",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc",
              "public": "false"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:subnet/subnet-0b3413c14e1a6b103",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.16.128/26",
            "id": "subnet-0b3413c14e1a6b103",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "004665482139",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az1-public-subnet",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc",
              "public": "true"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:subnet/subnet-0b9cd250bcfd390e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.16.64/26",
            "id": "subnet-0b9cd250bcfd390e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004665482139",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az2-private-subnet",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc",
              "public": "false"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "nonprod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:subnet/subnet-0685c2033a73dabe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.16.192/26",
            "id": "subnet-0685c2033a73dabe4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "004665482139",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_az2-public-subnet",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc",
              "public": "true"
            },
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:vpc/vpc-0a9de773c4fd37c67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.16.0/24",
            "default_network_acl_id": "acl-060555131caf3085d",
            "default_route_table_id": "rtb-0070a17a2bceb2a08",
            "default_security_group_id": "sg-04e9eeddc082dd1d4",
            "dhcp_options_id": "dopt-d6f832bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a9de773c4fd37c67",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0070a17a2bceb2a08",
            "owner_id": "004665482139",
            "tags": {
              "Name": "nonprod-us-e2-vpc1",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:004665482139:vpc-endpoint/vpce-04bd61359aff1eba6",
            "cidr_blocks": [
              "52.219.80.0/20",
              "3.5.128.0/22",
              "3.5.132.0/23",
              "52.219.96.0/20"
            ],
            "id": "vpce-04bd61359aff1eba6",
            "owner_id": "004665482139",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "Name": "nonprod-us-e2-vpc1_vpce",
              "deployed_by": "terraform",
              "environment": "nonprod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-nonprod/-/tree/master/environments/nonprod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-nonprod-vpc"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a9de773c4fd37c67"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}